--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=PT+Serif:ital,wght@0,400;0,700;1,400;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Great+Vibes&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  html{
+    font-family: 'PT Serif', serif;
+  }
+}
